--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,13 @@
             </intent-filter>
 
         </activity>
+        <activity
+            android:name=".view.descriptionscreen.DescriptionActivity"
+            android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".view.history.HistoryActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
