--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -5,8 +5,11 @@ apply plugin: 'kotlin-android'
 dependencies {
     implementation Design.appcompat
 
+    //Kotlin
     implementation Kotlin.core
     implementation Kotlin.stdlib
+
+    //Test
     testImplementation TestImpl.junit
     androidTestImplementation TestImpl.runner
     androidTestImplementation TestImpl.espresso
