--- a/dynamicfeature/src/main/AndroidManifest.xml
+++ b/dynamicfeature/src/main/AndroidManifest.xml
@@ -12,10 +12,7 @@
         </dist:delivery>
         <dist:fusing dist:include="true" />
     </dist:module>
-
     <application>
-        <activity
-            android:name=".view.history.HistoryActivity"
-            android:screenOrientation="portrait" />
+        <activity android:name=".view.history.DescriptionActivityFeature" />
     </application>
 </manifest>
