--- a/historyscreen/src/main/AndroidManifest.xml
+++ b/historyscreen/src/main/AndroidManifest.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lyapkov.history">
+    xmlns:dist="http://schemas.android.com/apk/distribution"
+    package="com.lyapkov.historyscreen">
+
+
+    <dist:module
+        dist:instant="false"
+        dist:title="@string/title_historyscreenfeature">
+        <dist:delivery>
+            <dist:on-demand />
+        </dist:delivery>
+        <dist:fusing dist:include="true" />
+    </dist:module>
 
     <application>
 
